--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>ระบบเสนอแฟ้มผู้อำนวยการ</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
 
@@ -14,206 +14,170 @@
 body{font-family:'Prompt',sans-serif;background:#f4f6f9;}
 .navbar{background:#0d2c6c;}
 .card{border:none;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.08);}
-.btn-primary{background:#0d2c6c;border:none;}
-.stat-card{border-left:5px solid #c5a100;}
 .hidden{display:none;}
-.badge-gold{background:#c5a100;}
 canvas{border:1px solid #ddd;border-radius:8px;}
 </style>
 </head>
-
 <body>
 
 <nav class="navbar navbar-dark px-3">
 <span class="navbar-brand">ระบบเสนอแฟ้มผู้อำนวยการ</span>
-<button class="btn btn-warning btn-sm" onclick="logout()">Logout</button>
+<div>
+<button class="btn btn-light btn-sm" onclick="openQRModal()">สร้างคิวอาร์โค้ด</button>
+<button id="loginBtn" class="btn btn-warning btn-sm" onclick="openLogin()">เข้าสู่ระบบเจ้าหน้าที่</button>
+</div>
 </nav>
 
 <div class="container mt-4">
 
-<!-- LOGIN -->
-<div id="loginPage" class="hidden">
-<div class="card p-4 mx-auto" style="max-width:350px">
-<h5 class="text-center">เข้าสู่ระบบ</h5>
-<input id="phone" class="form-control mt-3" placeholder="เบอร์โทร">
-<button class="btn btn-primary w-100 mt-3" onclick="login()">Login</button>
-</div>
-</div>
-
 <!-- DASHBOARD -->
-<div id="dashboardPage" class="hidden">
-
-<ul class="nav nav-tabs" id="tabs">
-<li class="nav-item"><button class="nav-link active" onclick="loadList('waiting')">รอพิจารณา <span class="badge bg-warning" id="bWaiting">0</span></button></li>
-<li class="nav-item"><button class="nav-link" onclick="loadList('approved')">พิจารณาแล้ว <span class="badge bg-success" id="bApproved">0</span></button></li>
-<li class="nav-item"><button class="nav-link" onclick="loadList('returned')">รับคืนแล้ว <span class="badge bg-primary" id="bReturned">0</span></button></li>
-<li class="nav-item"><button class="nav-link" onclick="loadList('all')">ทั้งหมด <span class="badge badge-gold" id="bAll">0</span></button></li>
+<ul class="nav nav-tabs">
+<li class="nav-item"><button class="nav-link active" onclick="loadList('waiting')">รอพิจารณา <span class="badge bg-warning" id="bw">0</span></button></li>
+<li class="nav-item"><button class="nav-link" onclick="loadList('approved')">พิจารณาแล้ว <span class="badge bg-success" id="ba">0</span></button></li>
+<li class="nav-item"><button class="nav-link" onclick="loadList('returned')">รับแฟ้มคืนแล้ว <span class="badge bg-primary" id="br">0</span></button></li>
+<li class="nav-item"><button class="nav-link" onclick="loadList('all')">ทั้งหมด <span class="badge bg-dark" id="ball">0</span></button></li>
 </ul>
 
 <div id="listArea" class="mt-3"></div>
 
-<hr>
-
-<h5>สร้างแฟ้มใหม่</h5>
-<input id="department" class="form-control mt-2" placeholder="หน่วยงาน">
-<input id="creator" class="form-control mt-2" placeholder="ผู้สร้าง">
-<button class="btn btn-primary mt-3" onclick="createFile()">สร้าง + QR</button>
-<div id="qr" class="mt-4"></div>
-
 </div>
 
-<!-- REGISTER PAGE -->
-<div id="registerPage" class="hidden">
-<div class="card p-4">
-<h5>ลงทะเบียนเสนอแฟ้ม ผอ.</h5>
-<input id="proposer" class="form-control mt-2" placeholder="ชื่อผู้เสนอ">
-<textarea id="remark" class="form-control mt-2" placeholder="หมายเหตุ"></textarea>
-<button class="btn btn-primary mt-3" onclick="registerFile()">บันทึกเสนอแฟ้ม</button>
-</div>
-</div>
+<!-- MODALS (Login / QR / Return / Register) -->
+<!-- Login Modal -->
+<div class="modal fade" id="loginModal"><div class="modal-dialog"><div class="modal-content p-3">
+<h5>เข้าสู่ระบบเจ้าหน้าที่</h5>
+<input id="phone" class="form-control mt-2" placeholder="เบอร์โทร">
+<button class="btn btn-primary mt-3" onclick="login()">เข้าสู่ระบบ</button>
+</div></div></div>
 
-<!-- RETURN PAGE -->
-<div id="returnPage" class="hidden">
-<div class="card p-4">
+<!-- QR Modal -->
+<div class="modal fade" id="qrModal"><div class="modal-dialog"><div class="modal-content p-3">
+<h5>สร้างคิวอาร์โค้ด</h5>
+<div>รหัสแฟ้ม: <b id="newFileId"></b></div>
+<input id="groupName" class="form-control mt-2" placeholder="ชื่อกลุ่มงาน">
+<button class="btn btn-primary mt-3" onclick="createQR()">สร้าง</button>
+<div id="qrBox" class="mt-3 text-center"></div>
+</div></div></div>
+
+<!-- Return Modal -->
+<div class="modal fade" id="returnModal"><div class="modal-dialog modal-lg"><div class="modal-content p-3">
 <h5>รับแฟ้มคืน</h5>
 <input id="receiver" class="form-control mt-2" placeholder="ชื่อผู้รับ">
-<canvas id="signatureCanvas" height="150"></canvas>
-<button class="btn btn-secondary mt-2" onclick="signaturePad.clear()">ล้าง</button>
+<canvas id="sigCanvas" height="150"></canvas>
+<button class="btn btn-secondary mt-2" onclick="signaturePad.clear()">ล้างลายเซ็น</button>
 <button class="btn btn-primary mt-2" onclick="submitReturn()">บันทึก</button>
-</div>
-</div>
-
-</div>
+</div></div></div>
 
 <script>
-/* ================= CONFIG ================= */
 const API_URL="https://script.google.com/macros/s/AKfycbxK4PsIqeO6C_v2n6MpqE1tEeT437DxrjVP7ywbV2Jk3IShxea1ClzfeLcNVSyxCb9F/exec";
 
-/* ================= API ================= */
-async function apiGet(action,param=""){
-const res=await fetch(`${API_URL}?action=${action}${param}`);
-return res.json();
-}
-async function apiPost(data){
-const res=await fetch(API_URL,{method:"POST",body:JSON.stringify(data)});
-return res.json();
+async function apiGet(a,p=""){return fetch(API_URL+"?action="+a+p).then(r=>r.json());}
+async function apiPost(d){return fetch(API_URL,{method:"POST",body:JSON.stringify(d)}).then(r=>r.json());}
+
+let globalData=[],signaturePad,currentFileId=null;
+
+window.onload=async function(){
+signaturePad=new SignaturePad(document.getElementById("sigCanvas"));
+await loadDashboard();
+checkQRScan();
 }
 
-/* ================= AUTH ================= */
-async function login(){
-const phone=phoneInput.value;
-const res=await apiPost({action:"login",phone});
-if(res.success){
-sessionStorage.setItem("user",res.name);
-showDashboard();
-}else alert("ไม่พบข้อมูล");
-}
-function logout(){sessionStorage.clear();location.href=location.pathname;}
-function checkLogin(){
-if(sessionStorage.getItem("user")) showDashboard();
-else showLogin();
-}
-function showLogin(){
-hideAll();loginPage.classList.remove("hidden");
-}
-function showDashboard(){
-hideAll();dashboardPage.classList.remove("hidden");
-loadDashboard();
-}
-function hideAll(){
-loginPage.classList.add("hidden");
-dashboardPage.classList.add("hidden");
-registerPage.classList.add("hidden");
-returnPage.classList.add("hidden");
-}
-
-/* ================= DASHBOARD ================= */
-let globalData=[];
 async function loadDashboard(){
 globalData=await apiGet("getAll");
-updateBadges();
+updateBadge();
 loadList("waiting");
 }
-function updateBadges(){
-let w=0,a=0,r=0;
-globalData.forEach(d=>{
-if(d.status=="waiting")w++;
-if(d.status=="approved")a++;
-if(d.status=="returned")r++;
-});
-bWaiting.innerText=w;
-bApproved.innerText=a;
-bReturned.innerText=r;
-bAll.innerText=globalData.length;
-}
-function loadList(type){
-let filtered=globalData;
-if(type!="all")filtered=globalData.filter(d=>d.status==type);
 
-let html=`<div class="table-responsive"><table class="table table-striped">
-<thead><tr><th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>จัดการ</th></tr></thead><tbody>`;
-filtered.forEach(d=>{
+function updateBadge(){
+let w=0,a=0,r=0;
+globalData.forEach(d=>{if(d.status=="waiting")w++;if(d.status=="approved")a++;if(d.status=="returned")r++;});
+bw.innerText=w;ba.innerText=a;br.innerText=r;ball.innerText=globalData.length;
+}
+
+function loadList(type){
+let data=globalData;
+if(type!="all")data=data.filter(d=>d.status==type);
+let html=`<table class="table table-striped"><thead><tr>
+<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>วันที่ออก</th><th>จัดการ</th></tr></thead><tbody>`;
+data.forEach(d=>{
 html+=`<tr>
 <td>${d.fileId}</td>
 <td>${d.proposer||""}</td>
 <td>${d.status}</td>
+<td>${d.outDate||""}</td>
 <td>
-${d.status=="waiting"?`<button class="btn btn-success btn-sm" onclick="approve('${d.fileId}')">อนุมัติ</button>`:""}
-</td></tr>`;
+${d.status=="waiting"&&sessionStorage.getItem("user")?
+`<input type="date" id="date_${d.fileId}">
+<button class="btn btn-success btn-sm" onclick="approve('${d.fileId}')">บันทึก</button>`:""}
+${d.status=="approved"?
+`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
+</td>
+</tr>`;
 });
-html+="</tbody></table></div>";
+html+="</tbody></table>";
 listArea.innerHTML=html;
 }
+
 async function approve(id){
-await apiPost({action:"updateApproved",fileId:id});
-loadDashboard();
+const date=document.getElementById("date_"+id).value;
+await apiPost({action:"updateApproved",fileId:id,outDate:date});
+await loadDashboard();
 }
 
-/* ================= CREATE FILE ================= */
-async function createFile(){
-const gen=await apiGet("generateFileId");
-const fileId=gen.fileId;
-await apiPost({action:"createFile",fileId:fileId,fileName:"แฟ้มเสนอผอ.",department:department.value,creator:creator.value});
-qr.innerHTML="";
-new QRCode(qr,{text:`${location.origin}?fileId=${fileId}`,width:200,height:200});
+function openReturn(id){
+currentFileId=id;
+new bootstrap.Modal(returnModal).show();
 }
 
-/* ================= QR WORKFLOW ================= */
-const urlParams=new URLSearchParams(window.location.search);
-const fileId=urlParams.get("fileId");
-if(fileId)checkStatus(fileId);
-
-async function checkStatus(id){
-const res=await apiGet("getStatus",`&fileId=${id}`);
-if(!res.status){hideAll();registerPage.classList.remove("hidden");}
-else if(res.status=="approved"){hideAll();returnPage.classList.remove("hidden");}
-}
-
-/* ================= REGISTER ================= */
-async function registerFile(){
-await apiPost({action:"register",fileId:fileId,proposer:proposer.value,remark:remark.value});
-alert("บันทึกสำเร็จ");
-location.href=location.pathname;
-}
-
-/* ================= RETURN ================= */
-let signaturePad;
-window.onload=function(){
-checkLogin();
-const canvas=document.getElementById("signatureCanvas");
-if(canvas)signaturePad=new SignaturePad(canvas);
-}
 async function submitReturn(){
 await apiPost({
 action:"updateReturned",
-fileId:fileId,
+fileId:currentFileId,
 receiver:receiver.value,
 signature:signaturePad.toDataURL()
 });
-alert("รับคืนเรียบร้อย");
+bootstrap.Modal.getInstance(returnModal).hide();
+await loadDashboard();
+}
+
+function openLogin(){new bootstrap.Modal(loginModal).show();}
+async function login(){
+const res=await apiPost({action:"login",phone:phone.value});
+if(res.success){
+sessionStorage.setItem("user",res.name);
+loginBtn.innerText=res.name;
+bootstrap.Modal.getInstance(loginModal).hide();
+}
+}
+
+function openQRModal(){generateFileId();new bootstrap.Modal(qrModal).show();}
+async function generateFileId(){
+const r=await apiGet("generateFileId");
+newFileId.innerText=r.fileId;
+currentFileId=r.fileId;
+}
+async function createQR(){
+await apiPost({action:"createFile",fileId:currentFileId,fileName:"แฟ้มเสนอ",department:groupName.value,creator:"system"});
+qrBox.innerHTML="";
+new QRCode(qrBox,{text:location.origin+"?fileId="+currentFileId,width:200,height:200});
+}
+
+async function checkQRScan(){
+const url=new URLSearchParams(location.search);
+const fileId=url.get("fileId");
+if(!fileId)return;
+const s=await apiGet("getStatus","&fileId="+fileId);
+if(!s.status||s.status=="returned"){
+const proposer=prompt("ชื่อผู้เสนอ");
+const remark=prompt("หมายเหตุ");
+await apiPost({action:"register",fileId:fileId,proposer:proposer,remark:remark});
+alert("ลงทะเบียนสำเร็จ");
 location.href=location.pathname;
+}else{
+await loadDashboard();
+}
 }
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
