--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <style>
 body{font-family:'Prompt',sans-serif;background:#f4f6f9;}
 .navbar{background:#0d2c6c;}
-.card{border:none;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.08);}
-.hidden{display:none;}
-canvas{border:1px solid #ddd;border-radius:8px;}
+canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
+.spinner-border-sm{width:1rem;height:1rem;}
 </style>
 </head>
 <body>
@@ -23,14 +22,13 @@ canvas{border:1px solid #ddd;border-radius:8px;}
 <nav class="navbar navbar-dark px-3">
 <span class="navbar-brand">ระบบเสนอแฟ้มผู้อำนวยการ</span>
 <div>
-<button class="btn btn-light btn-sm" onclick="openQRModal()">สร้างคิวอาร์โค้ด</button>
+<button class="btn btn-light btn-sm me-2" onclick="openQRModal()">สร้างคิวอาร์โค้ด</button>
 <button id="loginBtn" class="btn btn-warning btn-sm" onclick="openLogin()">เข้าสู่ระบบเจ้าหน้าที่</button>
 </div>
 </nav>
 
 <div class="container mt-4">
 
-<!-- DASHBOARD -->
 <ul class="nav nav-tabs">
 <li class="nav-item"><button class="nav-link active" onclick="loadList('waiting')">รอพิจารณา <span class="badge bg-warning" id="bw">0</span></button></li>
 <li class="nav-item"><button class="nav-link" onclick="loadList('approved')">พิจารณาแล้ว <span class="badge bg-success" id="ba">0</span></button></li>
@@ -39,34 +37,25 @@ canvas{border:1px solid #ddd;border-radius:8px;}
 </ul>
 
 <div id="listArea" class="mt-3"></div>
+<div id="registerPage"></div>
 
 </div>
 
-<!-- MODALS (Login / QR / Return / Register) -->
-<!-- Login Modal -->
-<div class="modal fade" id="loginModal"><div class="modal-dialog"><div class="modal-content p-3">
-<h5>เข้าสู่ระบบเจ้าหน้าที่</h5>
-<input id="phone" class="form-control mt-2" placeholder="เบอร์โทร">
-<button class="btn btn-primary mt-3" onclick="login()">เข้าสู่ระบบ</button>
-</div></div></div>
-
-<!-- QR Modal -->
-<div class="modal fade" id="qrModal"><div class="modal-dialog"><div class="modal-content p-3">
-<h5>สร้างคิวอาร์โค้ด</h5>
-<div>รหัสแฟ้ม: <b id="newFileId"></b></div>
-<input id="groupName" class="form-control mt-2" placeholder="ชื่อกลุ่มงาน">
-<button class="btn btn-primary mt-3" onclick="createQR()">สร้าง</button>
-<div id="qrBox" class="mt-3 text-center"></div>
-</div></div></div>
-
 <!-- Return Modal -->
-<div class="modal fade" id="returnModal"><div class="modal-dialog modal-lg"><div class="modal-content p-3">
+<div class="modal fade" id="returnModal">
+<div class="modal-dialog modal-lg">
+<div class="modal-content p-3">
 <h5>รับแฟ้มคืน</h5>
-<input id="receiver" class="form-control mt-2" placeholder="ชื่อผู้รับ">
+<input id="receiver" class="form-control mb-2" placeholder="ชื่อผู้รับ">
 <canvas id="sigCanvas" height="150"></canvas>
 <button class="btn btn-secondary mt-2" onclick="signaturePad.clear()">ล้างลายเซ็น</button>
-<button class="btn btn-primary mt-2" onclick="submitReturn()">บันทึก</button>
-</div></div></div>
+<button id="returnBtn" class="btn btn-primary mt-2" onclick="submitReturn()">
+<span id="returnText">บันทึก</span>
+<span id="returnSpin" class="spinner-border spinner-border-sm d-none"></span>
+</button>
+</div>
+</div>
+</div>
 
 <script>
 const API_URL="https://script.google.com/macros/s/AKfycbxK4PsIqeO6C_v2n6MpqE1tEeT437DxrjVP7ywbV2Jk3IShxea1ClzfeLcNVSyxCb9F/exec";
@@ -74,15 +63,16 @@ const API_URL="https://script.google.com/macros/s/AKfycbxK4PsIqeO6C_v2n6MpqE1tEe
 async function apiGet(a,p=""){return fetch(API_URL+"?action="+a+p).then(r=>r.json());}
 async function apiPost(d){return fetch(API_URL,{method:"POST",body:JSON.stringify(d)}).then(r=>r.json());}
 
-let globalData=[],signaturePad,currentFileId=null;
+let globalData=[],currentFileId=null,signaturePad;
 
-window.onload=async function(){
+window.onload=async()=>{
 signaturePad=new SignaturePad(document.getElementById("sigCanvas"));
+await checkQRScan();
 await loadDashboard();
-checkQRScan();
 }
 
 async function loadDashboard(){
+registerPage.innerHTML="";
 globalData=await apiGet("getAll");
 updateBadge();
 loadList("waiting");
@@ -95,22 +85,20 @@ bw.innerText=w;ba.innerText=a;br.innerText=r;ball.innerText=globalData.length;
 }
 
 function loadList(type){
-let data=globalData;
-if(type!="all")data=data.filter(d=>d.status==type);
-let html=`<table class="table table-striped"><thead><tr>
-<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>วันที่ออก</th><th>จัดการ</th></tr></thead><tbody>`;
+let data=type=="all"?globalData:globalData.filter(d=>d.status==type);
+let html=`<table class="table table-striped">
+<thead><tr>
+<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>ผู้รับ</th><th>จัดการ</th>
+</tr></thead><tbody>`;
 data.forEach(d=>{
 html+=`<tr>
 <td>${d.fileId}</td>
 <td>${d.proposer||""}</td>
 <td>${d.status}</td>
-<td>${d.outDate||""}</td>
+<td>${d.receiver||""}</td>
 <td>
-${d.status=="waiting"&&sessionStorage.getItem("user")?
-`<input type="date" id="date_${d.fileId}">
-<button class="btn btn-success btn-sm" onclick="approve('${d.fileId}')">บันทึก</button>`:""}
-${d.status=="approved"?
-`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
+${d.status=="approved"?`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
+${d.signature?`<button class="btn btn-outline-secondary btn-sm" onclick="viewSig('${d.signature}')">ดูลายเซ็น</button>`:""}
 </td>
 </tr>`;
 });
@@ -118,18 +106,15 @@ html+="</tbody></table>";
 listArea.innerHTML=html;
 }
 
-async function approve(id){
-const date=document.getElementById("date_"+id).value;
-await apiPost({action:"updateApproved",fileId:id,outDate:date});
-await loadDashboard();
-}
-
 function openReturn(id){
 currentFileId=id;
+signaturePad.clear();
 new bootstrap.Modal(returnModal).show();
 }
 
 async function submitReturn(){
+returnBtn.disabled=true;
+returnSpin.classList.remove("d-none");
 await apiPost({
 action:"updateReturned",
 fileId:currentFileId,
@@ -138,28 +123,13 @@ signature:signaturePad.toDataURL()
 });
 bootstrap.Modal.getInstance(returnModal).hide();
 await loadDashboard();
+returnBtn.disabled=false;
+returnSpin.classList.add("d-none");
 }
 
-function openLogin(){new bootstrap.Modal(loginModal).show();}
-async function login(){
-const res=await apiPost({action:"login",phone:phone.value});
-if(res.success){
-sessionStorage.setItem("user",res.name);
-loginBtn.innerText=res.name;
-bootstrap.Modal.getInstance(loginModal).hide();
-}
-}
-
-function openQRModal(){generateFileId();new bootstrap.Modal(qrModal).show();}
-async function generateFileId(){
-const r=await apiGet("generateFileId");
-newFileId.innerText=r.fileId;
-currentFileId=r.fileId;
-}
-async function createQR(){
-await apiPost({action:"createFile",fileId:currentFileId,fileName:"แฟ้มเสนอ",department:groupName.value,creator:"system"});
-qrBox.innerHTML="";
-new QRCode(qrBox,{text:location.origin+"?fileId="+currentFileId,width:200,height:200});
+function viewSig(sig){
+const w=window.open();
+w.document.write('<img src="'+sig+'" style="width:100%">');
 }
 
 async function checkQRScan(){
@@ -168,16 +138,28 @@ const fileId=url.get("fileId");
 if(!fileId)return;
 const s=await apiGet("getStatus","&fileId="+fileId);
 if(!s.status||s.status=="returned"){
-const proposer=prompt("ชื่อผู้เสนอ");
-const remark=prompt("หมายเหตุ");
-await apiPost({action:"register",fileId:fileId,proposer:proposer,remark:remark});
-alert("ลงทะเบียนสำเร็จ");
-location.href=location.pathname;
-}else{
-await loadDashboard();
+registerPage.innerHTML=`
+<div class="card p-4">
+<h5>ลงทะเบียนเสนอแฟ้ม ผอ.</h5>
+<div>รหัสแฟ้ม: <b>${fileId}</b></div>
+<input id="proposer" class="form-control mt-2" placeholder="ผู้เสนอ">
+<textarea id="remark" class="form-control mt-2" placeholder="หมายเหตุ"></textarea>
+<button id="regBtn" class="btn btn-primary mt-3" onclick="submitRegister('${fileId}')">
+<span id="regText">ลงทะเบียน</span>
+<span id="regSpin" class="spinner-border spinner-border-sm d-none"></span>
+</button>
+</div>`;
 }
+}
+
+async function submitRegister(id){
+regBtn.disabled=true;
+regSpin.classList.remove("d-none");
+await apiPost({action:"register",fileId:id,proposer:proposer.value,remark:remark.value});
+location.href=location.pathname;
 }
 </script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
