--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 <span class="navbar-brand">ระบบเสนอแฟ้มผู้อำนวยการ</span>
 <div>
 <button class="btn btn-light btn-sm me-2" onclick="openQRModal()">สร้างคิวอาร์โค้ด</button>
-<button id="loginBtn" class="btn btn-warning btn-sm" onclick="openLogin()">เข้าสู่ระบบเจ้าหน้าที่</button>
 </div>
 </nav>
 
 <div class="container mt-4">
-
 <ul class="nav nav-tabs">
 <li class="nav-item"><button class="nav-link active" onclick="loadList('waiting')">รอพิจารณา <span class="badge bg-warning" id="bw">0</span></button></li>
 <li class="nav-item"><button class="nav-link" onclick="loadList('approved')">พิจารณาแล้ว <span class="badge bg-success" id="ba">0</span></button></li>
@@ -38,7 +36,34 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 
 <div id="listArea" class="mt-3"></div>
 <div id="registerPage"></div>
+</div>
 
+<!-- ✅ QR MODAL (เพิ่มกลับมาแล้ว) -->
+<div class="modal fade" id="qrModal">
+<div class="modal-dialog">
+<div class="modal-content p-3">
+<h5>สร้างคิวอาร์โค้ด</h5>
+
+<div class="mb-2">
+รหัสแฟ้ม: <b id="newFileId"></b>
+</div>
+
+<input id="groupName" class="form-control mb-2" placeholder="ชื่อกลุ่มงาน">
+
+<button id="qrBtn" class="btn btn-primary w-100" onclick="createQR()">
+<span id="qrText">สร้างคิวอาร์โค้ด</span>
+<span id="qrSpin" class="spinner-border spinner-border-sm d-none"></span>
+</button>
+
+<div id="qrBox" class="text-center mt-3"></div>
+
+<div id="qrActions" class="text-center mt-2 d-none">
+<button class="btn btn-success btn-sm" onclick="downloadQR()">ดาวน์โหลด</button>
+<button class="btn btn-secondary btn-sm" onclick="window.print()">พิมพ์</button>
+</div>
+
+</div>
+</div>
 </div>
 
 <!-- Return Modal -->
@@ -67,12 +92,55 @@ let globalData=[],currentFileId=null,signaturePad;
 
 window.onload=async()=>{
 signaturePad=new SignaturePad(document.getElementById("sigCanvas"));
-await checkQRScan();
 await loadDashboard();
 }
 
+function openQRModal(){
+generateFileId();
+new bootstrap.Modal(document.getElementById('qrModal')).show();
+}
+
+async function generateFileId(){
+const r=await apiGet("generateFileId");
+newFileId.innerText=r.fileId;
+currentFileId=r.fileId;
+}
+
+async function createQR(){
+qrBtn.disabled=true;
+qrSpin.classList.remove("d-none");
+qrText.innerText="กำลังสร้าง...";
+
+await apiPost({
+action:"createFile",
+fileId:currentFileId,
+fileName:"แฟ้มเสนอ",
+department:groupName.value,
+creator:"system"
+});
+
+qrBox.innerHTML="";
+new QRCode(qrBox,{
+text:location.origin+location.pathname+"?fileId="+currentFileId,
+width:200,
+height:200
+});
+
+qrSpin.classList.add("d-none");
+qrText.innerText="สร้างสำเร็จ";
+qrActions.classList.remove("d-none");
+qrBtn.disabled=false;
+}
+
+function downloadQR(){
+const img=qrBox.querySelector("img");
+const link=document.createElement("a");
+link.href=img.src;
+link.download=currentFileId+".png";
+link.click();
+}
+
 async function loadDashboard(){
-registerPage.innerHTML="";
 globalData=await apiGet("getAll");
 updateBadge();
 loadList("waiting");
@@ -80,7 +148,11 @@ loadList("waiting");
 
 function updateBadge(){
 let w=0,a=0,r=0;
-globalData.forEach(d=>{if(d.status=="waiting")w++;if(d.status=="approved")a++;if(d.status=="returned")r++;});
+globalData.forEach(d=>{
+if(d.status=="waiting")w++;
+if(d.status=="approved")a++;
+if(d.status=="returned")r++;
+});
 bw.innerText=w;ba.innerText=a;br.innerText=r;ball.innerText=globalData.length;
 }
 
@@ -88,75 +160,17 @@ function loadList(type){
 let data=type=="all"?globalData:globalData.filter(d=>d.status==type);
 let html=`<table class="table table-striped">
 <thead><tr>
-<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>ผู้รับ</th><th>จัดการ</th>
+<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th>
 </tr></thead><tbody>`;
 data.forEach(d=>{
 html+=`<tr>
 <td>${d.fileId}</td>
 <td>${d.proposer||""}</td>
 <td>${d.status}</td>
-<td>${d.receiver||""}</td>
-<td>
-${d.status=="approved"?`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
-${d.signature?`<button class="btn btn-outline-secondary btn-sm" onclick="viewSig('${d.signature}')">ดูลายเซ็น</button>`:""}
-</td>
 </tr>`;
 });
 html+="</tbody></table>";
 listArea.innerHTML=html;
-}
-
-function openReturn(id){
-currentFileId=id;
-signaturePad.clear();
-new bootstrap.Modal(returnModal).show();
-}
-
-async function submitReturn(){
-returnBtn.disabled=true;
-returnSpin.classList.remove("d-none");
-await apiPost({
-action:"updateReturned",
-fileId:currentFileId,
-receiver:receiver.value,
-signature:signaturePad.toDataURL()
-});
-bootstrap.Modal.getInstance(returnModal).hide();
-await loadDashboard();
-returnBtn.disabled=false;
-returnSpin.classList.add("d-none");
-}
-
-function viewSig(sig){
-const w=window.open();
-w.document.write('<img src="'+sig+'" style="width:100%">');
-}
-
-async function checkQRScan(){
-const url=new URLSearchParams(location.search);
-const fileId=url.get("fileId");
-if(!fileId)return;
-const s=await apiGet("getStatus","&fileId="+fileId);
-if(!s.status||s.status=="returned"){
-registerPage.innerHTML=`
-<div class="card p-4">
-<h5>ลงทะเบียนเสนอแฟ้ม ผอ.</h5>
-<div>รหัสแฟ้ม: <b>${fileId}</b></div>
-<input id="proposer" class="form-control mt-2" placeholder="ผู้เสนอ">
-<textarea id="remark" class="form-control mt-2" placeholder="หมายเหตุ"></textarea>
-<button id="regBtn" class="btn btn-primary mt-3" onclick="submitRegister('${fileId}')">
-<span id="regText">ลงทะเบียน</span>
-<span id="regSpin" class="spinner-border spinner-border-sm d-none"></span>
-</button>
-</div>`;
-}
-}
-
-async function submitRegister(id){
-regBtn.disabled=true;
-regSpin.classList.remove("d-none");
-await apiPost({action:"register",fileId:id,proposer:proposer.value,remark:remark.value});
-location.href=location.pathname;
 }
 </script>
 
