--- a/index.html
+++ b/index.html
@@ -41,40 +41,31 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 
 </div>
 
-<!-- LOGIN MODAL -->
+<!-- MODALS -->
+
 <div class="modal fade" id="loginModal">
 <div class="modal-dialog">
 <div class="modal-content p-3">
 <h5>เข้าสู่ระบบเจ้าหน้าที่</h5>
 <input id="phone" class="form-control mb-2" placeholder="เบอร์โทร">
-<button id="loginBtn2" class="btn btn-primary" onclick="login()">
-<span id="loginText">เข้าสู่ระบบ</span>
-<span id="loginSpin" class="spinner-border spinner-border-sm d-none"></span>
-</button>
+<button id="loginBtn2" class="btn btn-primary" onclick="login()">เข้าสู่ระบบ</button>
 </div>
 </div>
 </div>
 
-<!-- QR MODAL -->
 <div class="modal fade" id="qrModal">
 <div class="modal-dialog">
 <div class="modal-content p-3">
 <h5>สร้างคิวอาร์โค้ด</h5>
 <div>รหัสแฟ้ม: <b id="newFileId"></b></div>
 <input id="groupName" class="form-control mt-2" placeholder="ชื่อกลุ่มงาน">
-
-<button id="createQRBtn" class="btn btn-primary mt-3" onclick="createQR()">
-<span id="qrText">สร้างคิวอาร์โค้ด</span>
-<span id="qrSpin" class="spinner-border spinner-border-sm d-none"></span>
-</button>
-
+<button class="btn btn-primary mt-3" onclick="createQR()">สร้างคิวอาร์โค้ด</button>
 <div id="qrBox" class="mt-3 text-center"></div>
 <div id="qrAction" class="mt-2 text-center"></div>
 </div>
 </div>
 </div>
 
-<!-- RETURN MODAL -->
 <div class="modal fade" id="returnModal">
 <div class="modal-dialog modal-lg">
 <div class="modal-content p-3">
@@ -82,11 +73,7 @@ canvas{border:1px solid #ccc;border-radius:8px;width:100%;}
 <input id="receiver" class="form-control mb-2" placeholder="ชื่อผู้รับ">
 <canvas id="sigCanvas" height="150"></canvas>
 <button class="btn btn-secondary mt-2" onclick="signaturePad.clear()">ล้างลายเซ็น</button>
-
-<button id="returnBtn" class="btn btn-primary mt-2" onclick="submitReturn()">
-<span id="returnText">บันทึก</span>
-<span id="returnSpin" class="spinner-border spinner-border-sm d-none"></span>
-</button>
+<button class="btn btn-primary mt-2" onclick="submitReturn()">บันทึก</button>
 </div>
 </div>
 </div>
@@ -105,6 +92,8 @@ await checkQRScan();
 await loadDashboard();
 }
 
+/* ================= REGISTER PAGE ================= */
+
 async function checkQRScan(){
 const params=new URLSearchParams(window.location.search);
 const fileId=params.get("fileId");
@@ -117,23 +106,27 @@ registerPage.innerHTML=`
 <div class="card p-4 mt-3">
 <h5>ลงทะเบียนเสนอแฟ้ม ผอ.</h5>
 <div>รหัสแฟ้ม: <b>${fileId}</b></div>
+<input type="date" id="submitDate" class="form-control mt-2">
 <input id="proposer" class="form-control mt-2" placeholder="ผู้เสนอ">
 <textarea id="remark" class="form-control mt-2" placeholder="หมายเหตุ"></textarea>
-<button id="regBtn" class="btn btn-primary mt-3" onclick="submitRegister('${fileId}')">
-<span id="regText">ลงทะเบียน</span>
-<span id="regSpin" class="spinner-border spinner-border-sm d-none"></span>
-</button>
+<button class="btn btn-primary mt-3" onclick="submitRegister('${fileId}')">ลงทะเบียน</button>
 </div>`;
 }
 }
 
 async function submitRegister(id){
-regBtn.disabled=true;
-regSpin.classList.remove("d-none");
-await apiPost({action:"register",fileId:id,proposer:proposer.value,remark:remark.value});
+await apiPost({
+action:"register",
+fileId:id,
+submitDate:submitDate.value,
+proposer:proposer.value,
+remark:remark.value
+});
 alert("ลงทะเบียนสำเร็จ");
 window.location.href=window.location.pathname;
 }
+
+/* ================= DASHBOARD ================= */
 
 async function loadDashboard(){
 globalData=await apiGet("getAll");
@@ -143,7 +136,11 @@ loadList("waiting");
 
 function updateBadge(){
 let w=0,a=0,r=0;
-globalData.forEach(d=>{if(d.status=="waiting")w++;if(d.status=="approved")a++;if(d.status=="returned")r++;});
+globalData.forEach(d=>{
+if(d.status=="waiting")w++;
+if(d.status=="approved")a++;
+if(d.status=="returned")r++;
+});
 bw.innerText=w;ba.innerText=a;br.innerText=r;ball.innerText=globalData.length;
 }
 
@@ -151,17 +148,20 @@ function loadList(type){
 let data=type=="all"?globalData:globalData.filter(d=>d.status==type);
 let html=`<table class="table table-striped">
 <thead><tr>
-<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>ผู้รับ</th><th>จัดการ</th>
+<th>รหัส</th><th>ผู้เสนอ</th><th>สถานะ</th><th>วันที่ออก</th><th>จัดการ</th>
 </tr></thead><tbody>`;
 data.forEach(d=>{
 html+=`<tr>
 <td>${d.fileId}</td>
 <td>${d.proposer||""}</td>
 <td>${d.status}</td>
-<td>${d.receiver||""}</td>
+<td>${d.outDate||""}</td>
 <td>
-${d.status=="approved"?`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
-${d.signature?`<button class="btn btn-outline-secondary btn-sm" onclick="viewSig('${d.signature}')">ดูลายเซ็น</button>`:""}
+${d.status=="waiting" && sessionStorage.getItem("user") ?
+`<input type="date" id="out_${d.fileId}">
+<button class="btn btn-success btn-sm" onclick="approve('${d.fileId}')">บันทึก</button>`:""}
+${d.status=="approved" ?
+`<button class="btn btn-primary btn-sm" onclick="openReturn('${d.fileId}')">รับแฟ้มคืน</button>`:""}
 </td>
 </tr>`;
 });
@@ -169,46 +169,13 @@ html+="</tbody></table>";
 listArea.innerHTML=html;
 }
 
-function openReturn(id){
-currentFileId=id;
-signaturePad.clear();
-new bootstrap.Modal(document.getElementById('returnModal')).show();
-}
-
-async function submitReturn(){
-returnBtn.disabled=true;
-returnSpin.classList.remove("d-none");
-await apiPost({
-action:"updateReturned",
-fileId:currentFileId,
-receiver:receiver.value,
-signature:signaturePad.toDataURL()
-});
-bootstrap.Modal.getInstance(document.getElementById('returnModal')).hide();
+async function approve(id){
+const date=document.getElementById("out_"+id).value;
+await apiPost({action:"updateApproved",fileId:id,outDate:date});
 await loadDashboard();
-returnBtn.disabled=false;
-returnSpin.classList.add("d-none");
 }
 
-function viewSig(sig){
-const w=window.open();
-w.document.write('<img src="'+sig+'" style="width:100%">');
-}
-
-function openLogin(){new bootstrap.Modal(document.getElementById('loginModal')).show();}
-
-async function login(){
-loginBtn2.disabled=true;
-loginSpin.classList.remove("d-none");
-const res=await apiPost({action:"login",phone:phone.value});
-if(res.success){
-sessionStorage.setItem("user",res.name);
-loginBtn.innerText=res.name;
-bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
-}
-loginBtn2.disabled=false;
-loginSpin.classList.add("d-none");
-}
+/* ================= QR ================= */
 
 function openQRModal(){
 new bootstrap.Modal(document.getElementById('qrModal')).show();
@@ -222,9 +189,6 @@ currentFileId=r.fileId;
 }
 
 async function createQR(){
-createQRBtn.disabled=true;
-qrSpin.classList.remove("d-none");
-
 await apiPost({
 action:"createFile",
 fileId:currentFileId,
@@ -234,19 +198,51 @@ creator:"system"
 });
 
 qrBox.innerHTML="";
-new QRCode(qrBox,{
+let qr=new QRCode(qrBox,{
 text:location.origin+location.pathname+"?fileId="+currentFileId,
 width:200,
 height:200
 });
 
+setTimeout(()=>{
+let canvas=qrBox.querySelector("canvas");
+let url=canvas.toDataURL("image/png");
 qrAction.innerHTML=`
-<button class="btn btn-success btn-sm" onclick="window.print()">พิมพ์</button>
-<a class="btn btn-outline-primary btn-sm" href="${qrBox.querySelector('img').src}" download="qr.png">ดาวน์โหลด</a>
-`;
+<a href="${url}" download="${currentFileId}.png" class="btn btn-success btn-sm">ดาวน์โหลด</a>
+<button class="btn btn-primary btn-sm" onclick="window.print()">พิมพ์</button>`;
+},300);
+}
 
-createQRBtn.disabled=false;
-qrSpin.classList.add("d-none");
+/* ================= RETURN ================= */
+
+function openReturn(id){
+currentFileId=id;
+signaturePad.clear();
+new bootstrap.Modal(document.getElementById('returnModal')).show();
+}
+
+async function submitReturn(){
+await apiPost({
+action:"updateReturned",
+fileId:currentFileId,
+receiver:receiver.value,
+signature:signaturePad.toDataURL()
+});
+bootstrap.Modal.getInstance(document.getElementById('returnModal')).hide();
+await loadDashboard();
+}
+
+function openLogin(){
+new bootstrap.Modal(document.getElementById('loginModal')).show();
+}
+
+async function login(){
+const res=await apiPost({action:"login",phone:phone.value});
+if(res.success){
+sessionStorage.setItem("user",res.name);
+loginBtn.innerText=res.name;
+bootstrap.Modal.getInstance(document.getElementById('loginModal')).hide();
+}
 }
 </script>
 
