--- a/index.html
+++ b/index.html
@@ -103,12 +103,20 @@ await loadDashboard();
 
 function formatThaiDate(dateStr){
 if(!dateStr) return "";
+
+const months = [
+"มกราคม","กุมภาพันธ์","มีนาคม","เมษายน","พฤษภาคม","มิถุนายน",
+"กรกฎาคม","สิงหาคม","กันยายน","ตุลาคม","พฤศจิกายน","ธันวาคม"
+];
+
 const d = new Date(dateStr);
-const day = String(d.getDate()).padStart(2,'0');
-const month = String(d.getMonth()+1).padStart(2,'0');
-const year = d.getFullYear();
-return `${day}/${month}/${year}`;
+const day = d.getDate();
+const month = months[d.getMonth()];
+const year = d.getFullYear() + 543; // แปลงเป็น พ.ศ.
+
+return `${day} ${month} ${year}`;
 }
+
 
 function getStatusBadge(status){
 if(status=="waiting") 
@@ -158,7 +166,19 @@ bw.innerText=w;ba.innerText=a;br.innerText=r;ball.innerText=globalData.length;
 function loadList(type){
 officerArea.innerHTML="";
 
-let data=type=="all"?globalData:globalData.filter(d=>d.status==type);
+let data = type=="all" 
+? [...globalData] 
+: globalData.filter(d=>d.status==type);
+
+// ✅ เรียงล่าสุดอยู่บนสุด
+data.sort((a,b)=>{
+// ถ้าเป็นแท็บพิจารณาแล้ว ให้เรียงตาม outDate
+if(type=="approved"){
+return new Date(b.outDate || 0) - new Date(a.outDate || 0);
+}
+// อื่น ๆ เรียงตาม submitDate
+return new Date(b.submitDate || 0) - new Date(a.submitDate || 0);
+});
 
 let html=`<table class="table table-bordered">
 <thead><tr>
