--- a/index.html
+++ b/index.html
@@ -128,11 +128,33 @@ else{btn.disabled=false;sp.classList.add("d-none");}
 /* Date Thai */
 function formatThaiDate(str){
 if(!str) return "";
-let d=new Date(str);
-if(isNaN(d)) return str;
-const m=["มกราคม","กุมภาพันธ์","มีนาคม","เมษายน","พฤษภาคม","มิถุนายน","กรกฎาคม","สิงหาคม","กันยายน","ตุลาคม","พฤศจิกายน","ธันวาคม"];
-return `${d.getDate()} ${m[d.getMonth()]} ${d.getFullYear()+543}`;
+
+try{
+let d;
+
+// ถ้าเป็น yyyy-mm-dd
+if(str.includes("-")){
+d = new Date(str);
 }
+// ถ้าเป็นข้อความยาวจาก Google Sheet
+else{
+d = new Date(Date.parse(str));
+}
+
+if(isNaN(d)) return str;
+
+const m=[
+"มกราคม","กุมภาพันธ์","มีนาคม","เมษายน","พฤษภาคม","มิถุนายน",
+"กรกฎาคม","สิงหาคม","กันยายน","ตุลาคม","พฤศจิกายน","ธันวาคม"
+];
+
+return `${d.getDate()} ${m[d.getMonth()]} ${d.getFullYear()+543}`;
+
+}catch(e){
+return str;
+}
+}
+
 
 function getStatusThai(s){
 if(s=="waiting") return `<span class="badge bg-warning text-dark">รอพิจารณา</span>`;
@@ -330,14 +352,28 @@ registerPage.innerHTML=`
 
 async function submitRegister(id,btn){
 spin(btn,true);
-await fetch(API_URL,{method:"POST",body:JSON.stringify({
+
+let dateValue = document.getElementById("submitDate").value;
+
+// ถ้าไม่เลือกวันที่ ให้ใช้วันนี้อัตโนมัติ
+if(!dateValue){
+const today = new Date();
+dateValue = today.toISOString().split("T")[0];
+}
+
+await fetch(API_URL,{
+method:"POST",
+body:JSON.stringify({
 action:"register",
 fileId:id,
-submitDate:submitDate.value,
-proposer:proposer.value
-})});
+submitDate: dateValue,  // ✅ บังคับส่งค่าแน่นอน
+proposer: proposer.value
+})
+});
+
 location.href=location.pathname;
 }
+
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
